--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/management_db
 spring.datasource.username=postgres
 spring.datasource.password=12345
 
-project.url=api/yashkin
+project.uri=api/yashkin
