--- a/src/main/resources/db.changelog/migrations/changelog-1.0.yaml
+++ b/src/main/resources/db.changelog/migrations/changelog-1.0.yaml
@@ -7,10 +7,10 @@ databaseChangeLog:
         - createTable:
             tableName: project
             columns:
-              - column: { name: id, type: uuid, autoIncrement: true, constraints: { primaryKey: true } }
+              - column: { name: id, type: BIGINT, autoIncrement: true, constraints: { primaryKey: true } }
               - column: { name: name, type: VARCHAR(255), constraints: { nullable: false } }
               - column: { name: status, type: VARCHAR(255), constraints: { nullable: false } }
-              - column: { name: customer_id, type: uuid, constraints: { nullable: false, foreignKeyName: fk_project_user, references: users(id) } }
+              - column: { name: customer_id, type: BIGINT, constraints: { nullable: false, foreignKeyName: fk_project_user, references: users(id) } }
 
   - changeSet:
       id: 000002-create-table-task
@@ -19,17 +19,17 @@ databaseChangeLog:
         - createTable:
             tableName: task
             columns:
-              - column: { name: id, type: uuid, autoIncrement: true, constraints: { primaryKey: true } }
+              - column: { name: id, type: BIGINT, autoIncrement: true, constraints: { primaryKey: true } }
               - column: { name: name, type: VARCHAR(255), constraints: { nullable: false } }
-              - column: { name: author_id, type: uuid, constraints: { nullable: false, foreignKeyName: fk_task_author, references: users(id) } }
-              - column: { name: executor_id, type: uuid, constraints: { foreignKeyName: fk_task_executor, references: users(id), nullable: true } }
+              - column: { name: author_id, type: BIGINT, constraints: { nullable: false, foreignKeyName: fk_task_author, references: users(id) } }
+              - column: { name: executor_id, type: BIGINT, constraints: { foreignKeyName: fk_task_executor, references: users(id), nullable: true } }
               - column: { name: type, type: VARCHAR(255), constraints: { nullable: false } }
               - column: { name: status, type: VARCHAR(255), constraints: { nullable: false } }
-              - column: { name: priority, type: INTEGER, constraints: { nullable: false }  }
-              - column: { name: release_id, type: uuid, constraints: { nullable: false, foreignKeyName: fk_task_release, references: release(id) } }
+              - column: { name: priority, type: INT, constraints: { nullable: false }  }
+              - column: { name: release_id, type: BIGINT, constraints: { nullable: false, foreignKeyName: fk_task_release, references: release(id) } }
               - column: { name: date_start, type: TIMESTAMP, constrains: {nullable: false} }
               - column: { name: date_end, type: TIMESTAMP, constrains: {nullable: false} }
-              - column: { name: project_id, type: uuid, constraints: { nullable: false, foreignKeyName: fk_task_project, references: project(id) } }
+              - column: { name: project_id, type: BIGINT, constraints: { nullable: false, foreignKeyName: fk_task_project, references: project(id) } }
 
   - changeSet:
       id: 000003-create-table-users
@@ -38,7 +38,7 @@ databaseChangeLog:
         - createTable:
             tableName: users
             columns:
-              - column: { name: id, type: uuid, autoIncrement: true, constrains: { primaryKey: true } }
+              - column: { name: id, type: BIGINT, autoIncrement: true, constrains: { primaryKey: true } }
               - column: { name: first_name, type: VARCHAR(255), constraints: { nullable: false } }
               - column: { name: last_name, type: VARCHAR(255), constraints: { nullable: false } }
               - column: { name: role, type: VARCHAR(255), constraints: { nullable: false } }
@@ -50,7 +50,7 @@ databaseChangeLog:
         - createTable:
             tableName: release
             columns:
-              - column: { name: id, type: uuid, autoIncrement: true, constrains: { primaryKey: true } }
-              - column: { name: version, type: INTEGER, constrains: { nullable: false, unique: false } }
+              - column: { name: id, type: BIGINT, autoIncrement: true, constrains: { primaryKey: true } }
+              - column: { name: version, type: INT, constrains: { nullable: false, unique: false } }
               - column: { name: date_start, type: TIMESTAMP, constrains: {nullable: false} }
               - column: { name: date_end, type: TIMESTAMP, constrains: {nullable: false} }
