add configuration slf4j in the app.prop

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,10 @@ spring.datasource.username=postgres
 spring.datasource.password=12345
 
 project.uri=api/yashkin
+
+# ??????? ????? ??? ???????
+logging.pattern.console= "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
+
+# ??????? ????? ??? ?????? ? ????
+logging.pattern.file= "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
+logging.file.path=logs
