--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 log4j.rootCategory=INFO, stdout
-#log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.file=org.apache.log4j.RollingFileAppender
 log4j.appender.file.File=mylogs.log
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
