add payment (feign)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,11 @@ spring.datasource.username=postgres
 spring.datasource.password=12345
 
 project.uri=api/yashkin
+account.api-base-url = http://localhost:8081/api/yashkin/operations
 
 logging.pattern.console= "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
 
 logging.pattern.file= "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
 logging.file.path=logs
+
+spring.main.allow-bean-definition-overriding=true
