fix_add_user_add_project

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/management_db
 spring.datasource.username=postgres
 spring.datasource.password=12345
 
+server.port=8080
+
 project.uri=api/yashkin
 account.api-base-url = http://localhost:8081/api/yashkin/operations
 
