--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,23 @@ logging.pattern.file= "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - 
 logging.file.path=logs
 
 spring.main.allow-bean-definition-overriding=true
+
+spring.kafka.client-id = project_manager
+spring.kafka.bootstrap-servers =  localhost:9092
+spring.kafka.producer.key-serializer = org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer = org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.consumer.group-id = project_manager-consumer
+spring.kafka.consumer.key-deserializer = org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer = org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.auto-offset-reset = earliest
+spring.kafka.consumer.enable-auto-commit = false
+spring.kafka.listener.ack-mode = manual_immediate
+
+springdoc.api-docs.path=/open-api-docs
+springdoc.swagger-ui.path=swagger-ui
+springdoc.swagger-ui.tags-sorter=alpha
+springdoc.swagger-ui.operations-sorter=method
+
+jwt.header=Authorization
+jwt.secret=secret
+jwt.expiration=100000
