--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,10 +7,10 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/management_db
 spring.datasource.username=postgres
 spring.datasource.password=12345
 
-server.port=8080
+server.port=8081
 
 project.uri=api/yashkin
-account.api-base-url = http://localhost:8081/api/yashkin/operations
+account.api-base-url = http://localhost:8080/api/yashkin/operations
 
 logging.pattern.console= "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
 
@@ -38,3 +38,10 @@ springdoc.swagger-ui.operations-sorter=method
 jwt.header=Authorization
 jwt.secret=secret
 jwt.expiration=100000
+
+## MongoDB
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.username=mongo
+spring.data.mongodb.password=12345
+spring.data.mongodb.database=mongo
