--- a/pom.xml
+++ b/pom.xml
@@ -48,12 +48,19 @@
             <version>2.1.6</version>
         </dependency>
 
-<!--        &lt;!&ndash; swagger for ignore security &ndash;&gt;
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-mongodb -->
         <dependency>
-            <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-security</artifactId>
-            <version>1.5.12</version>
-        </dependency>-->
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+            <version>2.6.1</version>
+        </dependency>
+
+        <!--        &lt;!&ndash; swagger for ignore security &ndash;&gt;
+                <dependency>
+                    <groupId>org.springdoc</groupId>
+                    <artifactId>springdoc-openapi-security</artifactId>
+                    <version>1.5.12</version>
+                </dependency>-->
 
         <dependency>
             <groupId>org.springdoc</groupId>
