feature: add tests for user controller, add k8s kind config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,11 +16,10 @@ logging.pattern.console= "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
 
 logging.pattern.file= "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
 logging.file.path=logs
-
 spring.main.allow-bean-definition-overriding=true
 
 spring.kafka.client-id = project_manager
-spring.kafka.bootstrap-servers =  localhost:9092
+spring.kafka.bootstrap-servers = localhost:9092
 spring.kafka.producer.key-serializer = org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer = org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.consumer.group-id = project_manager-consumer
@@ -37,7 +36,7 @@ springdoc.swagger-ui.operations-sorter=method
 
 jwt.header=Authorization
 jwt.secret=secret
-jwt.expiration=100000
+jwt.expiration=1000000
 
 ## MongoDB
 spring.data.mongodb.host=localhost
