--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,15 @@ services:
 #    image: pm:latest
 #    restart: always
 #    container_name: pm
+#    environment:
+#      - SPRING_DATASOURCE_URL=jdbc:postgresql://pm-db:5432/management_db
 #    ports:
 #      - "8081:8081"
 #    depends_on:
 #      - pm-db
+#      - project-manager-zookeeper
+#      - mongo
+#      - project-manager-kafka
 
   pm-db:
     container_name: pm-db
@@ -34,7 +39,6 @@ services:
     environment:
       - ALLOW_ANONYMOUS_LOGIN=yes
 
-
   project-manager-kafka:
     container_name: project-manager-kafka
     image: bitnami/kafka:latest
@@ -43,7 +47,7 @@ services:
     environment:
       - KAFKA_BROKER_ID=1
       - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092
-      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://127.0.0.1:9092
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://localhost:9092
       - KAFKA_CFG_ZOOKEEPER_CONNECT=project-manager-zookeeper:2181
       - ALLOW_PLAINTEXT_LISTENER=yes
     depends_on:
