--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,20 +1,1 @@
-## default connection pool
-spring.datasource.hikari.connectionTimeout=20000
-spring.datasource.hikari.maximumPoolSize=5
-
-## PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/management_test
-spring.datasource.username=postgres
-spring.datasource.password=12345
-
-server.port=8080
-
-project.uri=api/yashkin
-account.api-base-url = http://localhost:8081/api/yashkin/operations
-
-logging.pattern.console= "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
-
-logging.pattern.file= "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
-logging.file.path=logs
-
-spring.main.allow-bean-definition-overriding=true
+spring.profiles.active=test
