--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
 ## PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/management_db
+spring.datasource.url=jdbc:postgresql://${DATASOURCE_HOST:localhost}:5432/management_db
 spring.datasource.username=postgres
 spring.datasource.password=12345
 
@@ -19,7 +19,9 @@ logging.file.path=logs
 spring.main.allow-bean-definition-overriding=true
 
 spring.kafka.client-id = project_manager
-spring.kafka.bootstrap-servers = localhost:9092
+#???? ip ??????? ????? ipconfig (??????? ???????????? ????????? ???? ???????????? ????) ?????? localhost
+#????? ? ?????? ? ????? ???????? ? ?????-???????, ???? ??? ????????? ??? ??????, ?? ??????? localhost
+spring.kafka.bootstrap-servers = 192.168.3.7:9092
 spring.kafka.producer.key-serializer = org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer = org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.consumer.group-id = project_manager-consumer
