--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,9 +19,9 @@ logging.file.path=logs
 spring.main.allow-bean-definition-overriding=true
 
 spring.kafka.client-id = project_manager
-#???? ip ??????? ????? ipconfig (??????? ???????????? ????????? ???? ???????????? ????) ?????? localhost
+#???? ip ??????? ? ?????????? ? ?????-??????? ????? ipconfig (??????? ???????????? ????????? ???? ???????????? ????) ?????? localhost
 #????? ? ?????? ? ????? ???????? ? ?????-???????, ???? ??? ????????? ??? ??????, ?? ??????? localhost
-spring.kafka.bootstrap-servers = 192.168.3.7:9092
+spring.kafka.bootstrap-servers = ${KAFKA_BOOTSTRAP_SERVERS_HOST:localhost}:9092
 spring.kafka.producer.key-serializer = org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer = org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.consumer.group-id = project_manager-consumer
