--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,7 @@ logging.pattern.console= "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
 
 logging.pattern.file= "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
 logging.file.path=logs
+
 spring.main.allow-bean-definition-overriding=true
 
 spring.kafka.client-id = project_manager
@@ -31,8 +32,9 @@ spring.kafka.consumer.auto-offset-reset = earliest
 spring.kafka.consumer.enable-auto-commit = false
 spring.kafka.listener.ack-mode = manual_immediate
 
+springdoc.swagger-ui.enabled=true
 springdoc.api-docs.path=/open-api-docs
-springdoc.swagger-ui.path=swagger-ui
+springdoc.swagger-ui.path=/swagger
 springdoc.swagger-ui.tags-sorter=alpha
 springdoc.swagger-ui.operations-sorter=method
 
@@ -41,8 +43,14 @@ jwt.secret=secret
 jwt.expiration=1000000
 
 ## MongoDB
-spring.data.mongodb.host=localhost
+spring.data.mongodb.host=${MONGO_HOST:localhost}
 spring.data.mongodb.port=27017
 spring.data.mongodb.username=mongo
 spring.data.mongodb.password=12345
 spring.data.mongodb.database=mongo
+
+## Redis
+spring.redis.host=${REDIS_HOST:localhost}
+spring.redis.timeout=2000
+spring.cache.redis.time-to-live=100000
+spring.data.redis.repositories.enabled=false
