--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -54,3 +54,12 @@ spring.redis.host=${REDIS_HOST:localhost}
 spring.redis.timeout=2000
 spring.cache.redis.time-to-live=100000
 spring.data.redis.repositories.enabled=false
+
+#actuator
+#management.endpoints.web.base-path=/monitor
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+management.endpoint.health.roles=ADMIN
+info.application.name=project-manager
+info.application.description=spring boot project-manager
+info.application.version=0.1.0-SNAPSHOT
