--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.password=12345
 server.port=8081
 
 project.uri=api/yashkin
-account.api-base-url = http://localhost:8080/api/yashkin/operations
+account.api-base-url = http://192.168.3.7:8080/api/yashkin/operations
 
 logging.pattern.console= "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
 
@@ -25,7 +25,7 @@ spring.kafka.client-id = project_manager
 spring.kafka.bootstrap-servers = ${KAFKA_BOOTSTRAP_SERVERS_HOST:localhost}:9092
 spring.kafka.producer.key-serializer = org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer = org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.consumer.group-id = project_manager-consumer
+spring.kafka.consumer.group-id = consumer
 spring.kafka.consumer.key-deserializer = org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer = org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.auto-offset-reset = earliest
